testcase 1 POM implemented
testcase 1 POM implemented

--- a/CompTask/CompTask.csproj
+++ b/CompTask/CompTask.csproj
@@ -50,7 +50,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Helpers\CommonDriver.cs" />
+    <Compile Include="Pages\Login.cs" />
+    <Compile Include="Pages\ManageListing.cs" />
+    <Compile Include="Pages\ShareSkill.cs" />
+    <Compile Include="Tests\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -63,10 +67,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Helpers\" />
-    <Folder Include="Pages\" />
-    <Folder Include="Tests\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
