--- a/CompTask/packages.config
+++ b/CompTask/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net461" />
+  <package id="ExcelDataReader" version="2.1.2.3" targetFramework="net461" />
   <package id="ExtentReports" version="2.41.0" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net461" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
   <package id="WebDriver.ChromeDriver.win32" version="2.46.0" targetFramework="net461" />
 </packages>
